<resources>

    <string name="language">Language</string>
    <string name="night_mode">Night mode</string>
    <string name="application_info">Application information</string>

    <string name="app_name">bookM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_book_edit_hint">search key word</string>
    <string name="search">icon_search</string>
    <string name="add">icon_add_book</string>
    <string name="title_book_shelf_activity">My Books</string>
    <string name="repeat_type">Repeat Type</string>
    <string name="repeat_no">Repeat No</string>
    <string name="repeat">Repeat</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="details">Detail</string>
    <string name="add_reminder">Add reminder</string>
    <string name="title_activity_add_reminder">Add reminder</string>
    <string name="repeat_off">Repeat off</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="action_discard_reminder">discard reminder</string>
    <string name="action_save_reminder">save reminder</string>
    <string name="title_schedule_activity">My Schedules</string>
    <string name="more_book">More book</string>
    <string name="more_schedule">More schedule</string>
    <string name="title_statistic_activity">Statistic</string>
    <string name="book_name">Book name:</string>
    <string name="book_genre">Genre:</string>
    <string name="book_author">Author:</string>
    <string name="book_chose_img">Book cover:</string>
    <string name="book_import">Import book:</string>
    <string name="title_setting_activity">Setting</string>
    <string name="attack_book">Attack Book</string>
    <string name="title_book_schedule">Tôi thấy hoa vàng trên cỏ xanh</string>
    <string name="date_time">2019/8/7 7:58pm</string>
    <string name="repeat_mode">Every 1 Hour(s)</string>
    <string name="mo_ta">Mô tả</string>
    <string name="chose_book">Chose book</string>
    <string name="add_book">Add book</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="number_page">Number page</string>
    <string name="read">Read</string>
    <string name="change_info">Change Info</string>
    <string name="remove_from_library">Remove from library</string>
    <string name="save">Save</string>
    <string name="book_shelf">Book shelf</string>
</resources>
