<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragment.SettingFragment">
    <androidx.appcompat.widget.Toolbar
        android:background="@drawable/gradient_color_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="enterAlways|scroll|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_language_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/language"
            android:textSize="20dp"
            android:textColor="@color/textColor"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_brightness_2_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/night_mode"
            android:textSize="20dp"
            android:textColor="@color/textColor"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Switch
            android:id="@+id/switch_nightmode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:textColorHint="@color/colorPrimary"
            android:textOff="OFF"
            android:textOn="ON" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_information"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_info_outline_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/application_info"
            android:textSize="20dp"
            android:textColor="@color/textColor"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>