<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/cv"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/img_book_cover"
                    android:layout_margin="8dp"
                    android:layout_width="77dp"
                    android:layout_height="168dp"
                    android:layout_weight="1.5"
                    android:scaleType="fitXY"
                    android:src="@drawable/bia_sach1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="3.5"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/title_book_schedule"
                        android:textColor="@color/textPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_on_page"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="On page 20 of 120"
                        android:textColor="@color/textSecondary" />

                    <androidx.core.widget.ContentLoadingProgressBar
                        android:id="@+id/progess_bar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginLeft="40dp"
                        android:background="#69f0ae"
                        android:max="10" />

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/txt_date"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/date_time"
                        android:textColor="@color/textPrimary" />

                    <TextView
                        android:id="@+id/txt_mode_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/repeat_mode"
                        android:textColor="@color/textPrimary" />

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_notifi_on"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fab_size="mini"
        fab:fab_icon="@drawable/ic_notifications_on_white_24dp"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/fab_pressed"
        app:layout_anchor="@id/cv"
        app:layout_anchorGravity="center_vertical|end" />
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_notifi_off"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fab_size="mini"
        android:visibility="gone"
        fab:fab_icon="@drawable/ic_notifications_off_white_24dp"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/fab_pressed"
        app:layout_anchor="@id/cv"
        app:layout_anchorGravity="center_vertical|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
